--- a/frontend/src/routes/dashBoard/dashBoard.css
+++ b/frontend/src/routes/dashBoard/dashBoard.css
@@ -46,7 +46,6 @@
                 padding: 20px;
                 border: 1px solid #555;
                 border-radius: 20px;
-                cursor: pointer;
                img{
                     height: 40px;
                     width: 40px;
@@ -59,45 +58,18 @@
             }
         }
     }
-    .formContainer{
-        margin-top: auto;
-        width: 50%;
-        background-color: #2c2937;
-        border-radius: 20px;
-        display: flex;
-        form{
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            gap: 20px;
-            margin-bottom: 10px
-            ;
-            input{
-                flex: 1;
-                padding: 20px;
-                background-color: transparent;
-                border: none;
-                outline:none;
-                color: #ececec;
-            }
-            button{
-                background: #605e68;
-                border-radius: 50%;
-                border: none;
-                cursor: pointer;
-                padding: 10px;
-                display: flex;
-                justify-content: center;
-                margin-right: 10px;
-                img{
-                    height: 16px;
-                    width: 16px;
+    a{
+        padding: 40px 100px;
+        font-size: 17px;
+        background-color: #217bfe;
+        color: white;
+        border-radius: 30px;
+        margin-bottom: 100px;
 
-                }
-            }
+        &:hover{
+            color: #217bfe;
+            background-color: white;
+            font-size: 20px;
         }
-
     }
 }
